# bencodex

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/bufreader/: bufreader-test.torrent  main.rs
examples/bufwriter/: main.rs
examples/de/: main.rs
examples/ser/: main.rs
src/: extensions.rs  lib.rs  new.rs
