[package]
name = "bencodex"
version = "0.1.3"
authors = ["nomyfan <Nomyfan@live.com>"]
edition = "2018"
description = "bencode parser"
homepage = "https://github.com/Nomyfan/bencodex"
repository = "https://github.com/Nomyfan/bencodex"
readme = "README.md"
keywords = ["bencode"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
