[package]
name = "bencodex"
version = "0.2.1"
authors = ["nomyfan <Nomyfan@live.com>"]
edition = "2021"
description = "bencode parser"
homepage = "https://github.com/Nomyfan/bencodex"
repository = "https://github.com/Nomyfan/bencodex"
readme = "README.md"
keywords = ["bencode"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
path = "src/lib.rs"
name = "bencodex"
